Fix T101779: Incorrect app_id on Wayland

Using the title as the app_id prevented the proper icon being used
under KDE-Plasma.